$Id: History,v 1.9 2001-08-09 20:16:54 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/OpenGL
-------------------------------------

9th August 2001  John Allison  (vis-V03-02-10-00)
- Implemented G4OpenGLStoredSceneHandler::ClearTransientStore()

24th July 2001  John Allison  (vis-V03-02-06)
- G4OpenGLSceneHandler::AddPrimitive (const G4Text&) handles transformation.

14th July 2001  John Allison (opengl-V03-02-00)
- Fixed crash in optimised mode: added Initialise() to viewers so
  that windows are opened after viewers are fully constructed.

2nd April 2001  John Allison (opengl-V03-00-01 wrt vis-V03-00-09)
- Tidied G4OpenGLXmViewer callback code.  Removed superfluous header files.

7th March 2001  John Allison
- Changed char* to const char* in many places and that gave problems in
  calls to Xt and Xm.  Hope all's OK.  Differences:
    cvs diff -r vis-V03-00-06 vis-V03-00-07

25th January 2001  John Allison  (opengl-V03-00-00)
- Implemented running re-calculation of up-vector in the case of "object
  rotation" (lights move with camera) to prevent "flipping" of view when
  camera passes through up-vector.  Note that the default is "camera