@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLImmediateSceneHandler.cc,v 1.4 2001-07-11 10:08:53 gunter Exp $
+// $Id: G4OpenGLImmediateSceneHandler.cc,v 1.5 2001-08-09 20:17:00 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -100,18 +100,29 @@ void G4OpenGLImmediateSceneHandler::EndPrimitives () {
 }
 
 void G4OpenGLImmediateSceneHandler::BeginModeling () {
-
+  G4VSceneHandler::BeginModeling();
   if (fpViewer -> GetViewParameters ().GetDrawingStyle() == G4ViewParameters::hlr) {
     initialize_hlr = true;
   }
-  G4VSceneHandler::BeginModeling();
 }
 
 void G4OpenGLImmediateSceneHandler::EndModeling () {
-  G4VSceneHandler::EndModeling ();
   if (fpViewer -> GetViewParameters ().GetDrawingStyle() == G4ViewParameters::hlr) {
     initialize_hlr = true;
     //    glDisable (GL_POLYGON_OFFSET_FILL);
+  }
+  G4VSceneHandler::EndModeling ();
+}
+
+void G4OpenGLImmediateSceneHandler::ClearTransientStore () {
+
+  G4VSceneHandler::ClearTransientStore ();
+
+  // For immediate mode, clear screen and re-draw detector.
+  if (fpViewer) {
+    fpViewer -> ClearView ();
+    fpViewer -> SetView ();
+    fpViewer -> DrawView ();
   }
 }
 
@@ -124,4 +135,3 @@ G4int G4OpenGLImmediateSceneHandler::fSceneIdCount = 0;
 G4int G4OpenGLImmediateSceneHandler::fSceneCount = 0;
 
 #endif
-
