@@ -1,4 +1,4 @@
-$Id: History,v 1.9 2001-08-09 20:16:54 johna Exp $
+$Id: History,v 1.10 2001-08-09 20:18:19 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -22,6 +22,12 @@ History file for visualization/OpenGL
 
 9th August 2001  John Allison  (vis-V03-02-10-00)
 - Implemented G4OpenGLStoredSceneHandler::ClearTransientStore()
+- Removed G4OpenGLSceneHandler::AddPrimitive (const G4Polymarker&) (it only
+  invoked G4VSceneHandler::AddPrimitive (const G4Polymarker&) which is
+  picked up by inheritance anyway.
+- Removed lots of unnecessary header files from G4OpenGLStoredSceneHandler.cc.
+- Corrected order of calling base class functions in
+  G4OpenGLStoredSceneHandler::Begin/EndModeling.
 
 24th July 2001  John Allison  (vis-V03-02-06)
 - G4OpenGLSceneHandler::AddPrimitive (const G4Text&) handles transformation.
